# minimal-project-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml
