[tool.poetry]

name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"

packages = [{ include = "{{cookiecutter.package_name}}" }]

license = "MIT"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

readme = "README.md"


[tool.poetry.dependencies]

python = "^{{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.1"
jupytext = "^1.16.2"
notebook = "^7.3.2"

[tool.jupytext]
formats = "ipynb,py:percent"


[tool.poetry.requires-plugins]

poetry-plugin-export = ">=1.8"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"